argo/httproute-template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: backstage-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - REPLACE_ME
  - localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - name: argocd-server
      port: 80
